feat: add file management with Cloudinary integration
- Introduce File entity, repository, service and controller
- Add Cloudinary configuration for file storage
- Implement file upload/download endpoints
- Update Product API to support file attachments
- Add FileType enum for file categorization# Please enter the commit message for your changes. Lines starting